--- a/docs/css/quickstart.css
+++ b/docs/css/quickstart.css
@@ -39,7 +39,7 @@
 }
 
 .step-content .code-block {
-  margin-top: 1rem;
+  margin-top: 0;
 }
 
 .url-list {
